don't instantiate possibly unnecessary integers
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk@3866 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde